--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^6.1.1",
     "@nestjs/core": "^6.1.1",
     "@nestjs/platform-express": "^6.1.1",
+    "firebase-admin": "^7.3.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
