Add test for the controller

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "npx jest",
+    "test": "npx jest --verbose",
     "test:watch": "npx jest --watch",
     "test:cov": "npx jest --coverage",
     "test:e2e": "npx jest --config ./test/jest-e2e.json"
@@ -22,7 +22,11 @@
     "@nestjs/common": "^6.1.1",
     "@nestjs/core": "^6.1.1",
     "@nestjs/platform-express": "^6.1.1",
+    "@types/mocha": "^5.2.6",
+    "class-transformer": "^0.2.0",
     "firebase-admin": "^7.3.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
