--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
 		"resolveJsonModule": true,
     "noLib": false,
     "allowSyntheticDefaultImports": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true, 
+		"experimentalDecorators": true,
+		"esModuleInterop": true,
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
