--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,7 +1,8 @@
 {
   "extends": "tsconfig.json",
   "compilerOptions": {
-    "types": ["jest", "node"]
+		"types": ["jest", "node"],
+		"esModuleInterop": false,
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
