--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^6.1.1",
     "@types/mocha": "^5.2.6",
     "class-transformer": "^0.2.0",
+    "cors": "^2.8.5",
     "firebase-admin": "^7.3.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
