--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^6.1.1",
     "@nestjs/core": "^6.1.1",
     "@nestjs/platform-express": "^6.1.1",
+    "@nestjs/swagger": "^3.0.2",
     "@types/mocha": "^5.2.6",
     "class-transformer": "^0.2.0",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
+    "swagger-ui-express": "^4.0.2",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
