--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
   "dependencies": {
     "@nestjs/common": "^6.1.1",
     "@nestjs/core": "^6.1.1",
+    "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.1.1",
     "@nestjs/swagger": "^3.0.2",
+    "@types/joi": "^14.3.3",
     "@types/mocha": "^5.2.6",
     "class-transformer": "^0.2.0",
     "cors": "^2.8.5",
     "firebase-admin": "^7.3.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
