--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && tsc",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/src/main.js",
+    "postinstall": "npm run prestart:prod",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "npx jest --verbose",
     "test:watch": "npx jest --watch",
