--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,4 @@
 version: 2.1
-orbs:
-  heroku: circleci/heroku@0.0.6
 jobs:
   build:
     working_directory: ~/mern-starter
@@ -39,24 +37,24 @@ jobs:
           path: coverage
           prefix: coverage
   deploy:
-    executor: heroku/default
+    docker:
+      - image: buildpack-deps:trusty
     steps:
       - checkout
-      - heroku/install
-      - heroku/deploy-via-git:
-          only-branch: master          
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+        
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
-  heroku_deploy:
-    jobs:
-      - deploy
-      # - test:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         only: master
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
