--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
+      - config_files_data:
+          command: 'echo $FIREBASE_CONFIG > data/challenge-m-backend-cacde0f5638f.json'
+      - config_files:
+          command: 'echo $FIREBASE_CONFIG > src/config/challenge-m-backend-cacde0f5638f.json'          
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
