--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,11 @@ jobs:
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
-      - config_files_data:
+      - run:
+          name: Create private file data
           command: 'echo $FIREBASE_CONFIG > data/challenge-m-backend-cacde0f5638f.json'
-      - config_files:
+      - run:
+          name: Create private file
           command: 'echo $FIREBASE_CONFIG > src/config/challenge-m-backend-cacde0f5638f.json'          
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
